<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4D009688"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.alin.app1.Activities.SnapshotActivity">


    <Button
        android:id="@+id/snapshotButton"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/get_snapshot" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/snapshotButton"
        android:layout_marginTop="-3dp"
        android:background="#33009688"
        android:scrollbars="horizontal|vertical">


        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alignmentMode="alignBounds"
            android:columnCount="2"
            android:columnOrderPreserved="false"
            android:useDefaultMargins="true">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:text="@string/user_activity" />


            <TextView
                android:id="@+id/userActivityTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill|clip_horizontal"
                android:text="@string/dash" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/headphones" />


            <TextView
                android:id="@+id/action1TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill|clip_horizontal"
                android:text="@string/dash" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/location" />


            <TextView
                android:id="@+id/locationTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill|clip_horizontal"
                android:text="@string/dash" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/weather" />


            <TextView
                android:id="@+id/weatherTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill|clip_horizontal"
                android:text="@string/dash" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/places" />


            <TextView
                android:id="@+id/placesTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill|clip_horizontal"
                android:text="@string/dash" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/beacon" />


            <TextView
                android:id="@+id/beaconTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="fill|clip_horizontal"
                android:text="@string/dash" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/time"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/timeTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill|clip_horizontal"
                android:text="@string/dash" />
        </GridLayout>
    </ScrollView>
</RelativeLayout>